# ha-ev-solar-charger

./: CHANGELOG.md  LICENSE  README.md  hacs.json  pyproject.toml
.gitea/workflows/: test.yml
custom_components/ev_solar_charger/: __init__.py  algorithm.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  diagnostics.py  manifest.json  number.py  select.py  sensor.py  strings.json  switch.py  time.py
tests/: conftest.py  test_algorithm.py  test_config_flow.py  test_coordinator.py
